--- a/static-site/index.html
+++ b/static-site/index.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="relative">
-                    <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="NUET Preparation" class="rounded-lg shadow-2xl w-full">
+                    <img src="/hero-image.jpg" alt="NUET Preparation" class="rounded-lg shadow-2xl w-full">
                 </div>
             </div>
         </div>
